# pytest-html-dashboard

./: .gitignore  CHANGELOG.md  GITHUB_PUBLISHING_GUIDE.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  profile_update.md  pyproject.toml  setup.py  test-history.db  update_github_info.ps1
.github/workflows/: publish.yml  test.yml
config/: sample_config.yaml
docs/: CHANGELOG.md  GITHUB_PUBLISHING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  PYPI_PUBLISHING_GUIDE.md  RELEASE_v1.1.0.md
docs/images/: README.md
examples/: README.md  basic_usage.py  custom_config.yaml
pytest-html-dashboard-mirror/: config  packed-refs
pytest-html-dashboard-mirror/objects/pack/: pack-1c01f321578cc695187ac7b6a94b0c1c80b36b0b.idx  pack-1c01f321578cc695187ac7b6a94b0c1c80b36b0b.rev
reports/: complete_dashboard_report.html  v1.2.0_features.html
src/pytest_dashboard/: __init__.py  config.py  error_reporting.py  plugin.py
src/pytest_html_dashboard/: __init__.py  ai_analyzer.py  config.py  error_reporting.py  history.py  html_generator.py  html_generator_old_backup.py  plugin.py  realtime.py
tests/: test_dashboard_features.py
